--- a/UI/src/core/pages/setting-page/setting-page.html
+++ b/UI/src/core/pages/setting-page/setting-page.html
@@ -1,1 +1,6 @@
-<p>setting-page works!</p>
+<div>
+    setting main path:
+    <ui-button (btnClick)="setMainPath()">
+        set
+    </ui-button>
+</div>
